Ajustes de conexión

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
+PORT=3000
+NODE_ENV=development
+
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=nuevaPassword123
+DB_PORT=3306
 DB_NAME=blog_db
-PORT=3000
